exercise 3 + extra credit

--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -19,9 +19,12 @@
 <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
 
 <body>
-    <div id="root"></div>
+    <!-- <div id="root"></div> -->
     <script type="module">
-        const rootElement = document.getElementById('root')
+        const rootElement = document.createElement('root')
+        rootElement.setAttribute('id', 'root')
+        document.body.append(rootElement)
+
         const element = document.createElement('div')
         element.textContent = 'Hello World'
         element.className = 'container'
