--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -8,24 +8,18 @@
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
-
-    // 🐨 use that function in place of the divs below with:
-    // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
-    function message({children}) {
-      return <div className="message">{childrne}</div>
+// this the new Message component
+    function Message({children}) {
+      return <div className="message">{children}</div>
     }
 
     const element = (
       <div className="container">
-        {React.createElement(message, {children: 'Hello World'})}
-        {React.createElement(message, {children: 'Goodbye World'})}
-
+        <Message>Hello World</Message>
+        <Message>Goodbye World</Message>
       </div>
     )
 
-    React.createElement({children: "Hello World"})
-
-    // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
     ReactDOM.createRoot(document.getElementById('root')).render(element)
   </script>
 </body>
